[package]
authors = ["Richard Cook"]
description = "Richard's Workspace Tool"
edition = "2021"
homepage = "https://github.com/rcook/rws/"
license = "MIT"
name = "rws"
version = "0.3.0"

[dependencies]
clap = "2.34.0"
colored = "1.9.3"
dirs = "2.0.2"
gc = "0.3.6"
git2 = { path = "git2-rs" }
joat-git-url = "0.0.3"
joat-path = "0.0.8"
percent-encoding = "2.2.0"
regex = "1.8.1"
rlua = "0.17.1"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tempfile = "3.5.0"
topological-sort = "0.1.0"
which = "3.1.1"
yaml-rust = "0.4"
