[package]
authors = ["Richard Cook"]
description = "Richard's Workspace Tool"
edition = "2021"
homepage = "https://github.com/rcook/rws/"
license = "MIT"
name = "rws"
version = "0.4.0"

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
colored = "2.0.0"
dirs = "5.0.0"
gc = "0.4.1"
git2 = { path = "git2-rs" }
joat-git-url = "0.0.3"
joat-path = "0.0.8"
percent-encoding = "2.2.0"
regex = "1.8.1"
rlua = "0.19.4"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tempfile = "3.5.0"
topological-sort = "0.2.2"
which = "4.4.0"
yaml-rust = "0.4"
path-absolutize = "3.0.14"
anyhow = "1.0.70"
joatmon = "0.0.20"
serde_json = "1.0.96"
rstest = "0.17.0"
remove_dir_all = "0.8.2"
