[package]
authors = ["Richard Cook"]
categories = ["development-tools"]
description = "Richard's Workspace Tool"
edition = "2021"
homepage = "https://github.com/rcook/rws"
keywords = ["general"]
license = "MIT"
name = "rws"
repository = "https://github.com/rcook/rws"
version = "0.4.1"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
dirs = "5.0.1"
git2 = { path = "git2-rs" }
joatmon = "0.0.29"
joat-git-url = "0.0.5"
joat-path = "0.0.9"
path-absolutize = "3.1.0"
percent-encoding = "2.2.0"
regex = "1.8.3"
rlua = "0.19.4"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
tempfile = "3.5.0"
topological-sort = "0.2.2"
remove_dir_all = "0.8.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
which = "4.4.0"
lazy_static = "1.4.0"

[dev-dependencies]
rstest = "0.17.0"
