[package]
name = "rws"
version = "$cargo_version"
description = "$full_version"
authors = ["Richard Cook <rcook@rcook.org>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
colored = "1.9.3"
gc = "0.3.3"
percent-encoding = "2.1.0"
rlua = "0.17.0"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
topological-sort = "0.1.0"
which = "3.1.1"
yaml-rust = "0.4"
